--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Website quản lí quán ăn của bạn</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Teko:wght@300;400;500;600&display=swap"
+      rel="stylesheet"
+    />
     <!-- Ionicon -->
     <script
       type="module"
